REGRESSION(301878@main): ftp-eplf-directory.py is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=301329 rdar://163245149

Reviewed by Alan Baradlay.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::setCompatibilityMode):

Before 301878@main we relied on extension stylesheet invalidation to invalidate the style scope
on quirks mode flip. Do this explicitly instead.

Also remove the optimization that no longer avoids any work.

Canonical link: https://commits.webkit.org/302024@main