Source/WebCore/dom/Document.cpp
@@ -1365,9 +1365,9 @@ void Document::setCompatibilityMode(DocumentCompatibilityMode mode)
         // All user stylesheets have to reparse using the different mode.
         if (auto* extensionStyleSheets = extensionStyleSheetsIfExists()) {
             extensionStyleSheets->clearPageUserSheet();
-            if (extensionStyleSheets->hasCachedInjectedStyleSheets())
-                extensionStyleSheets->invalidateInjectedStyleSheetCache();
+            extensionStyleSheets->invalidateInjectedStyleSheetCache();
         }
+        styleScope().didChangeStyleSheetEnvironment();
     }
 
     if (CheckedPtr view = renderView())
